--- a/src/07_harjoitus_7.Rmd
+++ b/src/07_harjoitus_7.Rmd
@@ -11,11 +11,11 @@ Luo uusi QGIS-projekti ja tallenna se nimellä (**Projekti → Tallenna nimellä
 Lisää projektiin **kunta1000k_2017.gpkg**-tiedosto (**.../kurssihakemisto/Tilastokeskus/kunnat2017/**), jossa on Suomen kuntarajat. 
 Lisää karttaprojektiin vielä Maanmittauslaitoksen 1:1M yleiskartan **TieViiva-aineisto** (kansiosta **.../kurssihakemisto/MML/YK_1M/**).
 Voit asettaa kunnat-monikulmion täytevärin pois ja saada siten tieviiva-aineiston paremmin näkyviin:
-
+![kuvaustekniikka](GP002_johdanto_qgisin_kayttoon/src/img/harjoitus_7/image14.gif)
 Karttanäkymä näyttää nyt kunkin väriasetuksia lukuunottamatta tältä:
-
+![näkymä](GP002_johdanto_qgisin_kayttoon/src/img/harjoitus_7/image4.png)
 Voit tarkistaa/muokata projektisi koordinaattijärjestelmän asetuksia **Projekti → Properties → Koordinaattijärjestelmä** -välilehdessä tai klikkaamalla oikeasta alareunasta:
-
+![koordinaattijärjestelmä](GP002_johdanto_qgisin_kayttoon/src/img/harjoitus_7/image2.png)
 Kummatkin tavat avaavat projektin koordinaattijärjestelmän määrityslomakkeen. Tarkista, että järjestelmä on ETRS89 / ETRS-TM35FIN.
 Muista, että voit lisätä ongelmitta projektiisi aineistoja eri karttaprojektioissa. Monet analyysityökalut eivät kuitenkaan toimi, jos analyysin lähtöaineistot eivät ole samassa koordinaattijärjestelmässä.
 
@@ -35,24 +35,28 @@ Monista **TieViiva taso** hiiren oikealla näppäimellä aukeavasta valikosta **
 Samasta valikosta löytyy myös **Suodata** -toiminto, joka määrittelee, mitä aineiston kohteita tämä taso käyttää. 
 
 Kirjoita **Suodattimena käytettävä lauseke** -kenttään ”Tienumero” = 66. Saat kentän nimen suoraan lausekkeeseen **Tietokentät**-kohdasta tuplaklikkaamalla ja **Operaattorit**-kuvakkeita klikkaamalla. Kun painat OK, karttanäkymässä näkyy enää suodattimen läpäisevät kohteet.
+![suodatin](GP002_johdanto_qgisin_kayttoon/src/img/harjoitus_7/image6.png)
 Seuraavaksi lähdemme käsittelemään aineistoja **Vektori**-ylämenusta, josta löytyvät ensisijaiset  työkalut vektorianalyysien toteuttamiseen:
+![vektorivalikko](GP002_johdanto_qgisin_kayttoon/src/img/harjoitus_7/image10.png)
 
 Käynnistä **Ristiinleikkaus(intersection...)**-työkalu **Geoprosessointi**-valikosta. Määrittele leikattavaksi tasoksi tiestöaineisto ja leikkaavaksi tasoksi kuntaraja-aineisto:
-
+![ristiinleikkaus](GP002_johdanto_qgisin_kayttoon/src/img/harjoitus_7/image1.png)
 Suorita analyysi painamalla Suorita ja paina sen jälkeen **Sulje**. Analyysi luo uuden väliaikaisen tulostason nimeltä **Ristiinleikkaus (intersection)**.
 Karttaikkunassa aineisto näyttää samalta kuin alkuperäinen aineisto. Vertaile tasojen (**Finnish Route 66** ja **Ristiinleikkaus (intersection)**) ominaisuustietoja. Mitä huomaat? 
 Seuraavaksi voit visualisoida syntyneen tulostason tieviivat kunkin kunnan osalta eri välillä: määrittele kuvaustekniikka luokittelemalla tiestö kunnan nimen perusteella käyttäen kenttää Nimi. 
 Aktivoi **Näytä kohteiden lukumäärä** -toiminto (paina hiiren oikealla näppäimellä tason nimen päällä Tasoluettelossa).
+![lukumäärä](GP002_johdanto_qgisin_kayttoon/src/img/harjoitus_7/image12.gif)
 
 Tasoluettelossa luokittelun pitäisi näyttää suunnilleen seuraavalta (värit ja viivojen paksuus on sen mukainen kuin olet määritellyt):
+![luokittelu](GP002_johdanto_qgisin_kayttoon/src/img/harjoitus_7/image13.png)
 
 Seuraavaksi voimme yhdistää erilliset tieviivat **Sulauta**-työkalun (Dissolve) avulla. Valitse työkalu **Vektori-Geoprosessointi → Sulauta**. Sulauta tieviivat kunnan nimen (tai numeron) perusteella ja tallenna lopputulos kurssihakemistoon haluamallasi nimellä (esimerkiksi kunta_sulautettu.shp). Täytä asetukset Sulauta-ikkunassa kuvan mukaisesti:
-
+![sulauta](GP002_johdanto_qgisin_kayttoon/src/img/harjoitus_7/image5.png)
 Paina **Suorita** ja sitten **Sulje**.
 Voit kopioida aiemmin luodun tason tyylin helposti uudelle aineistoille. Valitse hiiren oikealla näppäimellä avautuvasta valikosta **Tyyli → Kopioi tyyli**. Valitse äsken luotu taso ja **Tyyli → Liitä tyyli**. Kun laitat vielä kohteiden lukumäärän näkyviin, niin lopputuloksen pitäisi tasoluettelossa olla seuraava:
-
+![sulautettu](GP002_johdanto_qgisin_kayttoon/src/img/harjoitus_7/image11.png)
 Lopuksi voimme laskea, kuinka pitkä pätkä tietä nro. 66 osuu kunkin kunnan alueelle.  Avaa ominaisuustietotaulukko ja käytä **Kentän arvojen laskin**-työkalua. Luo uusi kenttä, jossa on kunkin tieviivan pituus hyödyntämällä Geometria-ryhmästä **$length**-funktiota.
-
+![taulukko](GP002_johdanto_qgisin_kayttoon/src/img/harjoitus_7/image7.png)
 Psst! Muista tallentaa QGIS-projekti harjoituksen lopuksi.
 
 
