--- a/src/07_harjoitus_7.Rmd
+++ b/src/07_harjoitus_7.Rmd
@@ -1,13 +1,16 @@
 #Harjoitus 7: Paikkatietoanalyysit
 
 ####Harjoituksen sisältö
+
 Harjoituksessa tutustutaan QGISin erilaisiin paikkatietoanalyyseihin.
 
 ####Harjoituksen tavoite
+
 Koulutettava oppii käyttämään eri aineistoille tarkoitettuja paikkatietoanalyysejä tarkoituksenmukaisesti.
 
 
 ###Valmistautuminen
+
 Luo uusi QGIS-projekti ja tallenna se nimellä (**Projekti → Tallenna nimellä…) “QGIS_harjoitus_7”**. 
 Lisää projektiin **kunta1000k_2017.gpkg**-tiedosto (**.../kurssihakemisto/Tilastokeskus/kunnat2017/**), jossa on Suomen kuntarajat. 
 Lisää karttaprojektiin vielä Maanmittauslaitoksen 1:1M yleiskartan **TieViiva-aineisto** (kansiosta **.../kurssihakemisto/MML/YK_1M/**).
@@ -28,11 +31,14 @@ Muista, että voit lisätä ongelmitta projektiisi aineistoja eri karttaprojekti
 
 Huomautus GK-koordinaatiston EPSG-koodeista!
 Suomalaiset koordinaattijärjestelmät (vanhat ja uudet) ovat pääosin hyvin tuettuina QGIS-ohjelmistossa. On kuitenkin huomautettava, että EPSG-määrittelyissä on lievää epäjohdonmukaisuutta. Esimerkiksi tarkemmat GK-koordinaattijärjestelmän koodit löytyvät EPSG:n luettelosta kahteen kertaan: EPSG:3126 – EPSG:3138 koodeilla löytyvät koordinaattijärjestelmät ETRS-GK19FIN - ETRS-GK31FIN. Nämä ovat kuitenkin ”virheellisiä”, keskimeridiaanin koordinaatti on aina 500 000.
+
 OIKEAT EPSG-koodit: EPSG:3873 - EPSG:3885
+
 VIRHEELLISET EPSG-koodit: EPSG:3126 -  EPSG:3138
 
 
 ###Vektorianalyysit
+
 Tässä harjoituksessa on tarkoitus etsiä ne kunnat, joiden alueella kulkee suomalainen versio kuuluisasta Route 66 -tiestä. Lyhyesti harjoituksen kulku on seuraava:
 - Valitaan tieaineistosta ne tieviivat, joiden numero on 66
 - Tehdään spatiaalinen analyysi kunta- ja tieviiva-aineiston kanssa, jonka myötä viiva-aineisto saa kunta-aineiston sisältämät tiedot
@@ -73,7 +79,7 @@ Voit kopioida aiemmin luodun tason tyylin helposti uudelle aineistoille. Valitse
 
 ![](img/harjoitus_7/image11.png)
 
-Lopuksi voimme laskea, kuinka pitkä pätkä tietä nro. 66 osuu kunkin kunnan alueelle.  Avaa ominaisuustietotaulukko ja käytä **Kentän arvojen laskin**-työkalua. Luo uusi kenttä, jossa on kunkin tieviivan pituus hyödyntämällä Geometria-ryhmästä **$length**-funktiota.
+Lopuksi voimme laskea, kuinka pitkä pätkä tietä nro. 66 osuu kunkin kunnan alueelle.  Avaa ominaisuustietotaulukko ja käytä **Kentän arvojen laskin**-työkalua. Luo uusi kenttä, jossa on kunkin tieviivan pituus hyödyntämällä **Geometria**-ryhmästä **$length**-funktiota.
 
 ![](img/harjoitus_7/image7.png)
 
@@ -81,12 +87,15 @@ Psst! Muista tallentaa QGIS-projekti harjoituksen lopuksi.
 
 
 ##Lisätehtävä: ominaisuustietojen lisääminen ja tarkastelu
-Lopuksi voimme laskea, kuinka suuri osa suhteellisesti (osuus koko pituudesta) tietä nro. 66 osuu kunkin kunnan alueelle. Prosenttilaskun toimittamiseksi tarvitset tiedon tiesegmenttien yhteenlasketusta kokonaispituudesta eli summasta, jonka saat käyttöösi Kenttien tilastolliset tunnusluvut -työkalun avulla: avaa yläpalkista **Prosessointi → Työkalut** ja kirjoita hakukenttään Kenttien tilastolliset tunnusluvut. 
+
+Lopuksi voimme laskea, kuinka suuri osa suhteellisesti (osuus koko pituudesta) tietä nro. 66 osuu kunkin kunnan alueelle. Prosenttilaskun toimittamiseksi tarvitset tiedon tiesegmenttien yhteenlasketusta kokonaispituudesta eli summasta, jonka saat käyttöösi Kenttien tilastolliset tunnusluvut -työkalun avulla: avaa yläpalkista **Prosessointi → Työkalut** ja kirjoita etsi hakukentän avulla työkalu **Kenttien tilastolliset tunnusluvut**. 
 
 ![](img/harjoitus_7/image3.png)
 
 Anna avautuvassa ikkunassa kentäksi, josta tilastot lasketaan, edellisessä tehtävässä laskemasi pituus-kenttä:
 Prosenttilasku tehdään samalla tavalla kuin pituuden tai pinta-alan laskenta eli tehdään uusi sarake, jonka kohteille lasketaan arvot seuraavan funktion avulla (heittomerkkien sisään jäävä sana/merkkijono viittaa sarakkeen nimeen ja ‘summa’ laskemaasi arvoon):
-("Pituus" / summa)*100
+
+("Pituus" / summa)`*100`
+
 Lopuksi voit visualisoida kartalle kunkin kunnan osuuden haluamallasi tavalla.
 
