--- a/src/08_harjoitus_8.Rmd
+++ b/src/08_harjoitus_8.Rmd
@@ -1,27 +1,27 @@
 #Harjoitus 8: QGISin lisäosat
 
-###Harjoituksen sisältö
+##Harjoituksen sisältö
 
 Harjoituksessa asennetaan muutama QGIS-lisäosa.
 
-###Harjoituksen tavoite
+##Harjoituksen tavoite
 
 Koulutettava oppii asentamaan QGIS-lisäosia ja ymmärtää niiden toimintaperiaatteet.
 
 
-###Valmistautuminen
+##Valmistautuminen
 
 Käynnistä QGIS-ohjelmisto. Avaa uusi QGIS-projekti ja tallenna se nimellä  (**Projekti → Tallenna nimellä…) “QGIS_harjoitus_8”**.
 Lataa projektiin seuraavat aineistot:
 **.../kurssihakemisto/MML/Korkeusmalli_2m/L4133B.asc (korkeusmalli)** ja
 **.../kurssihakemisto/HSY/Vaestotietoruudukko_2019.gpkg**
 
-###Lisäosien hallinta
+##Lisäosien hallinta
 
 Lisäosia  lisätään käyttöön päävalikosta **Lisäosat → Hallitse ja asenna lisäosia…** -valikon kautta.
-Valitse *Asennettu*-välilehti ja saat esille kaikki asennetut lisäosat. Huomaa, että suurinta osaa niistä ei ole aktivoitu. Lisäosien aktivointi lisää erilaisia valikkoja ja paneeleja QGISin käyttöliittymään. Siksi on hyödyllistä piilottaa ne joita ei käytetä.
+Valitse **Asennettu**-välilehti ja saat esille kaikki asennetut lisäosat. Huomaa, että suurinta osaa niistä ei ole aktivoitu. Lisäosien aktivointi lisää erilaisia valikkoja ja paneeleja QGISin käyttöliittymään. Siksi on hyödyllistä piilottaa ne joita ei käytetä.
 
-###QuickMapServices
+##QuickMapServices
 
 **QuickMapServices (QMS) -lisäosan** kautta saat QGISin karttaprojektiin erilaisia taustakarttoja verkosta, kuten OpenStreetMaps, Google Maps tai Bing Maps.
 Avaa **Lisäosat → Hallitse ja asenna lisäosia…**, valitse **Kaikki**-välilehti ja etsi quickmapservices tekstillä:
@@ -41,7 +41,7 @@ Lisää vielä **Qgis2threejs**-lisäosa. Tämä lisäosa mahdollistaa nopean ko
 
 Voit tarkastella visualisointia esikatseluikkunassa tai exportoida sen html-tiedostoksi jolloin sen voi avata selaimella.
 
-###Qgis2web
+##Qgis2web
 
 Qgis2web -lisäosa on helppokäyttöinen lisäosa verkkokartan luomista varten. Sillä voi tuottaa verkkokarttoja hyödyntäen **Leaflet**- tai **OpenLayers**-kirjastoja. Qgis2web on hyödyllinen apuväline näiden kirjastojen opetteluun ja verkkokarttajulkaisujen tekemiseen.
 Avaa Qgis2web valikosta **Verkko → Qgis2web → Create web map**. Valitse väestötietoruudukko-aineiston kentille **Popup fields** -kohdan alta **Inline label**, ja klikkaa **Update preview**. Kun kartta on päivittynyt, klikkaa ruudukkoa.
