--- a/src/07_harjoitus_7.Rmd
+++ b/src/07_harjoitus_7.Rmd
@@ -1,15 +1,15 @@
 #Harjoitus 7: Paikkatietoanalyysit
 
-####Harjoituksen sisältö
+##Harjoituksen sisältö
 
 Harjoituksessa tutustutaan QGISin erilaisiin paikkatietoanalyyseihin.
 
-####Harjoituksen tavoite
+##Harjoituksen tavoite
 
 Koulutettava oppii käyttämään eri aineistoille tarkoitettuja paikkatietoanalyysejä tarkoituksenmukaisesti.
 
 
-###Valmistautuminen
+##Valmistautuminen
 
 Luo uusi QGIS-projekti ja tallenna se nimellä (**Projekti → Tallenna nimellä…) “QGIS_harjoitus_7”**. 
 Lisää projektiin **kunta1000k_2017.gpkg**-tiedosto (**.../kurssihakemisto/Tilastokeskus/kunnat2017/**), jossa on Suomen kuntarajat. 
@@ -37,7 +37,7 @@ OIKEAT EPSG-koodit: EPSG:3873 - EPSG:3885
 VIRHEELLISET EPSG-koodit: EPSG:3126 -  EPSG:3138
 
 
-###Vektorianalyysit
+##Vektorianalyysit
 
 Tässä harjoituksessa on tarkoitus etsiä ne kunnat, joiden alueella kulkee suomalainen versio kuuluisasta Route 66 -tiestä. Lyhyesti harjoituksen kulku on seuraava:
 - Valitaan tieaineistosta ne tieviivat, joiden numero on 66
@@ -84,7 +84,6 @@ Lopuksi voimme laskea, kuinka pitkä pätkä tietä nro. 66 osuu kunkin kunnan a
 ![](img/harjoitus_7/image7.png)
 
 Psst! Muista tallentaa QGIS-projekti harjoituksen lopuksi.
-
 
 ##Lisätehtävä: ominaisuustietojen lisääminen ja tarkastelu
 
