--- a/src/06_harjoitus_6.Rmd
+++ b/src/06_harjoitus_6.Rmd
@@ -1,16 +1,16 @@
 # Harjoitus 6: Paikkatietoaineiston editointi
 
-#### Harjoituksen sisältö
+## Harjoituksen sisältö
 Harjoituksessa digitoidaan uusi vektorimuotoinen paikkatietoaineisto.
 
-#### Harjoituksen tavoite
+## Harjoituksen tavoite
 Opiskelija oppii kuinka paikkatietoaineistoja tuotetaan ja editoidaan.
 
 
-### Valmistautuminen
+## Valmistautuminen
 Luo uusi QGIS-projekti ja tallenna se nimellä (**Projekti → Tallenna nimellä…**) “**QGIS_harjoitus_6**”.
 
-### Vektoriaineiston (GeoPackage) luominen
+## Vektoriaineiston (GeoPackage) luominen
 Luodaan uusi GeoPackage-aineisto valitsemalla työkalupalkista Uusi **GeoPackage-taso…**
 
 ![](img/harjoitus_6/image21.png)
@@ -29,7 +29,7 @@ Anna uudelle kentälle nimi “**aluetyyppi**” ja aseta tyypiksi “**Teksti**
 
 ![](img/harjoitus_6/image1.png)
 
-### Digitoitavan tason tietorakenne
+## Digitoitavan tason tietorakenne
 Jatketaan edelleen **Tason ominaisuudet -ikkunassa**. Valitse nyt vasemmalta **Attribuuttilomake-välilehti**. Tässä välilehdessä voit määrittää sääntöjä ja rajoituksia laatimillesi tietokentille (ts. taulun sarakkeille). Kyseiset määritykset auttavat säilyttämään tietorakenteen sekä itse tiedon laadun ja helpottavat myös digitointia.
 Valitse **Käytettävissä olevista käyttöliittymäelementit -kohdasta** aluetyyppi-kenttä ja valitse **Muokkauksen tyyppi -kohdasta Arvoluettelo** alla olevan kuvan tapaan. Mikäli et näe nyt aluetyyppi-saraketta, sulje vielä **Tason ominaisuudet -ikkuna** ja avaa se uudelleen.
 
@@ -37,12 +37,12 @@ Valitse **Käytettävissä olevista käyttöliittymäelementit -kohdasta** aluet
 
 Arvoluettelon avulla käyttäjän on mahdollista määrittää arvoja vetovalikosta editointia tehdessään. Muokkaa soluja tuplaklikkaamalla. Määritä arvot kuvassa näkyvän luettelon mukaisesti. Kirjaa myös aluetyypeille kuvaukset halutessasi. Kuvauksista on hyötyä yleisesti tietorakenteiden eheyden ylläpitämiseksi. Kun olet valmis, klikkaa **OK** palataksesi karttanäkymään. 
 
-### Pohjakartan lisääminen
+## Pohjakartan lisääminen
 Voit käyttää digitoinnin pohjana Maanmittauslaitoksen ilmakuvia. Lisää nyt ortoilmakuva **L4131F.jp2-rasteritiedosto** kansiosta **.../kurssihakemisto/MML/Ortoilmakuvat/** QGISiin. Muista, että myös rasteriaineistot saat käyttöösi helposti raahaamalla tiedoston karttaikkunaan tai **Tasot-paneeliin**. 
 
 ![](img/harjoitus_6/image13.png)
 
-### Digitoinnin aloittaminen
+## Digitoinnin aloittaminen
 Valitse kartalta mieleisesi alue, jota lähdet digitoimaan. Zoomaa tarpeeksi lähelle, jotta erotat digitoitavat alueet hyvin (esim. rakennukset).
 
 ![](img/harjoitus_6/image3.png)
@@ -78,9 +78,7 @@ Näin sinulle aukeaa alla olevan mukainen tarttumisen asetukset määrittelyikku
 
 > Psst! Muista tallentaa QGIS-projekti harjoituksen lopuksi.
 
-
-
-### Lisätehtävä: CAD-digitointi
+## Lisätehtävä: CAD-digitointi
 Voit kokeilla myös CAD-pohjaista digitointia, joka on kehittynyt verrattain paljon QGISin uudessa versiossa. Työkalut saat esiin lisäämällä **Digitoinnin lisätyökalut** -ylämenusta **Näytä → Työkalut → Digitoinnin lisätyökalut**. 
 Kokeile erilaisia työkaluja, esimerkiksi Täytä piiri -työkalua. Tätä voit hyödyntää esimerkkitapauksena peltoja digitoidessa. Kuvitellaan, että peltojen sisään jää aina välillä pieniä metsäsaarekkeita, jotka olisi digitoitava 
 
@@ -90,7 +88,7 @@ metsä-kohteiksi. **Täytä piiri -työkalulla** pystyt irrottamaan alueen omaks
 
 ![](img/harjoitus_6/image2.png)
 
-### Lisätehtävä: ominaisuustietojen lisääminen
+## Lisätehtävä: ominaisuustietojen lisääminen
 Seuraavaksi laskemme pinta-alan ominaisuustietoja edellä muodostettuun paikkatietoaineistoon. Avaa Alueet-tason ominaisuustietotaulu (attribuuttitaulu).
 
 ![](img/harjoitus_6/image15.png)
